--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
       	height: 100%;
       	width: 12%;
       	background-color: gray;
+         border-radius: 10px;
       }
       
       html, body {
@@ -36,6 +37,7 @@
         padding: 0;
         background-image: url("background-image.jpg");
       }
+
 
       /*!
  * bootswatch v3.3.7
